<?xml version="1.0" encoding="utf-8"?><resources>    <string name="app_name_SplashScreen" translatable="false">Schedule Manager</string>    <string name="login_MainActivity">Login</string>    <string name="new_user_MainActivity">New User</string>    <string name="skip_sign_in_MainActivity">Skip ></string>    <string name="new_account_Register">Create New Account</string>    <string name="email_Register">Email</string>    <string name="password_Register">Password</string>    <string name="register_Register">Register</string>    <string name="registered_login_Register">Already Registered ? Login Here</string>    <string name="not_created_any_tasks_Fragment2">You have no Tasks, enjoy the day.  <br />Click <b>+</b> button below to add new Task</string>    <string name="new_task_Fragment2">New Task</string>    <string name="not_created_any_notes_Fragment3">Notes you write will appear here.  <br />Click <b>+</b> button below to add new Note</string>    <string name="new_note_Fragment3">New Note</string>    <string name="not_scheduled_any_email_Fragment4">You have no scheduled email.  <br /> Click <b>+</b> button below to schedule new Email</string>    <string name="new_email_Fragment4">New Email</string>    <string name="no_tasks_or_scheduled_email_FragmentHome">You have nothing to work on, Enjoy!. <br />Click <b>+</b> button below to create Task, Note, or Email</string>    <string name="add_email_FragmentHome">New Email</string>    <string name="add_note_FragmentHome">New  Note</string>    <string name="add_task_FragmentHome">New  Task</string>    <string name="title_NewTask">Describe Task</string>    <string name="date_NewTask">Date</string>    <string name="show_calendar_btn_NewTask">Select Date</string>    <string name="time_NewTask">Time</string>    <string name="show_clock_btn_NewTask">Select Time</string>    <string name="mon_NewTask">MON</string>    <string name="s_weekDays_NewTask">S</string>    <string name="m_weekDays_NewTask">M</string>    <string name="t_weekDays_NewTask">T</string>    <string name="w_weekDays_NewTask">W</string>    <string name="f_weekDays_NewTask">F</string>    <string name="select_type_of_task_NewTask">Select Type Of Task</string>    <string name="save_NewTask">Create New Task</string>    <string name="cancel_NewTask">Discard</string>    <string name="close_NewTask">Close</string>    <string name="title_TaskOpen">Describe Task</string>    <string name="date_TaskOpen">Date</string>    <string name="show_calendar_btn_TaskOpen">Select Date</string>    <string name="time_TaskOpen">Time</string>    <string name="show_clock_btn_TaskOpen">Select Time</string>    <string name="save_changes_TaskOpen">Save Changes</string>    <string name="discard_TaskOpen">Discard</string>    <string name="save_NewNote">Save</string>    <string name="title_NewNote">Title</string>    <string name="body_NewNote">Note</string>    <string name="save_NoteOpen">Save</string>    <string name="title_NoteOpen">Title</string>    <string name="body_NoteOpen">Note</string>    <string name="show_Timepicker">Show Clock</string>    <string name="save_Timepicker">Save</string>    <string name="cancel_alarm_Timepicker">Discard</string>    <string name="from_ScheduleEmail">From:</string>    <string name="email_id_of_sender_ScheduleEmail">Email id of Sender</string>    <string name="use_default_ScheduleEmail">Use Default</string>    <string name="to_ScheduleEmail">To:</string>    <string name="email_id_of_receiver_ScheduleEmail">Email id of Receiver</string>    <string name="subject_ScheduleEmail">Subject:</string>    <string name="subjectEditTxt_ScheduleEmail">Subject</string>    <string name="message_ScheduleEmail">Message:</string>    <string name="messageEditTxt_ScheduleEmail">Message</string>    <string name="date_ScheduleEmail">Date:</string>    <string name="dateEditTxt_ScheduleEmail">Date</string>    <string name="show_calendar_btn_ScheduleEmail">Select Date</string>    <string name="time_ScheduleEmail">Time:</string>    <string name="timeEditTxt_ScheduleEmail">Time</string>    <string name="set_time_btn_ScheduleEmail">Select Time</string>    <string name="close_ScheduleEmail">Close</string>    <string name="cancel_ScheduleEmail">Discard</string>    <string name="save_and_schedule_ScheduleEmail">Save and Schedule</string>    <string name="write_your_instant_note_Pop_Up_Dialog">Write Your Instant Note</string>    <string name="title_Pop_Up_Dialog">Title</string>    <string name="description_Pop_Up_Dialog">Description</string>    <string name="dismiss_Pop_Up_Dialog">Dismiss</string>    <string name="save_Pop_Up_Dialog">Save</string>    <string name="task_Always_On_Notification">Task</string>    <string name="quick_note_Always_On_Notification">Quick Note</string>    <string name="email_Always_On_Notification">Email</string>    <string name="sample_Settings">Sample</string>    <string name="theme_Settings">Theme</string>    <string name="assistive_notification_bar_Settings">Assistive Notification Bar</string>    <string name="select_text_color_Settings">Select text color for quick note window</string>    <string name="google_app_password_Settings">Google App Password for Schedule Manager</string>    <string name="this_is_required_step_Settings">(This is required step. Without it Email Scheduling feature won\'t work)</string>    <string name="app_password_Settings">Paste App Password here</string>    <string name="save_password_Settings">Save Password</string>    <string name="backup_settings_Settings">BackUp Settings</string>    <string name="update_user_data_Settings">Update User Data in Server</string>    <string name="update_Settings">Update</string>    <string name="restore_user_data_Settings">Restore User Data From Server</string>    <string name="restore_Settings">Restore</string>    <string name="update_user_name_settings">Change User Name</string>    <string name="enter_new_name_Settings">Enter New Name</string>    <string name="update_email_id_Settings">Change Email-ID</string>    <string name="fill_new_password_Settings">Enter Password</string>    <string name="update_password_Settings">Change Password</string>    <string name="delete_account_Settings">Delete Account</string>    <string name="log_out_Settings">Log Out</string>    <string name="user_account_settings_Settings">User Account Settings</string>    <string name="header_nav_No_Display_Name">Hello, hope we are helping you manage time</string>    <string name="select_background_NoteBackgroundColor_Dialog">Select Background</string>    <string name="tagline_MainActivity">Let\'s Inculcate the Art of Scheduling</string>    <string name="rate_dialog_title">Rate us</string>    <string name="rate_dialog_message">If you are enjoying your Schedule Manager. Please consider rating us to inspire us to serve you more. It won\'t take more than a minute. Thanks!</string>    <string name="rate_dialog_ok">Rate us Now</string>    <string name="rate_dialog_cancel">Remind <br /> Me Later</string>    <string name="rate_dialog_no">No, Thanks</string>    <string name="fullScreenTaskAction"><![CDATA[<   Slide for Action   >]]></string></resources>