<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting.AppPasswordActivity"
    android:background="@color/colorPrimary">

    <ImageButton
        android:id="@+id/App_Password_layout_Back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:tint="@color/colorPrimaryDark"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/Setting_App_Password_txt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/App_Password_layout_Back_btn"
            android:text="@string/google_app_password_Settings"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/Setting_App_Password_Password_Edit_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_password_Settings"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/Setting_App_Password_txt_view"
            android:layout_margin="20dp"
            android:fontFamily="@font/poppins_medium"
            android:background="@android:color/transparent"
            />

    <TextView
        android:id="@+id/App_Password_layout_warning_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Setting_App_Password_Password_Edit_txt"
        android:layout_margin="10dp"
        android:text="@string/this_is_required_step_Settings"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal"/>



    <Button
            android:id="@+id/Setting_App_Password_layout_Save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/App_Password_layout_warning_txt"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/save_password_Settings"
            android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/poppins_semibold"
            android:textSize="12sp"
            android:backgroundTint="@color/colorPrimary" />

    <Button
        android:id="@+id/Setting_App_Password_get_App_Password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Get App Password"
        android:textColor="@color/colorFabs"
        android:fontFamily="@font/poppins_semibold"
        app:backgroundTint="@color/colorPrimaryDark"
        android:layout_margin="10dp"
        android:layout_below="@id/Setting_App_Password_layout_Save_btn"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>